# g1_ros_ws

./: README.md
install/: local_setup.sh  setup.sh
install/g1_description/share/g1_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/g1_description/share/g1_description/cmake/: g1_descriptionConfig-version.cmake  g1_descriptionConfig.cmake
install/g1_description/share/g1_description/environment/: ament_prefix_path.dsv  path.dsv
install/g1_description/share/g1_description/launch/: display.launch.py  view.launch.py
install/g1_description/share/g1_description/meshes/: head_link.STL  left_ankle_pitch_link.STL  left_ankle_roll_link.STL  left_elbow_link.STL  left_hip_pitch_link.STL  left_hip_roll_link.STL  left_hip_yaw_link.STL  left_knee_link.STL  left_shoulder_pitch_link.STL  left_shoulder_roll_link.STL  left_shoulder_yaw_link.STL  left_wrist_pitch_link.STL  left_wrist_roll_link.STL  left_wrist_yaw_link.STL  pelvis.STL  pelvis_contour_link.STL  right_ankle_pitch_link.STL  right_ankle_roll_link.STL  right_base_link.STL  right_elbow_link.STL  right_hip_pitch_link.STL  right_hip_roll_link.STL  right_hip_yaw_link.STL  right_index_distal_link.STL  right_index_f_link.STL  right_index_middle_link.STL  (+32 more)
install/g1_gazebo/lib/g1_gazebo/: base_tf_broadcaster.py  overlap_monitor.py  pid_bridge.py  position_bridge.py
install/g1_gazebo/share/g1_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/g1_state_bridge/lib/g1_state_bridge/: hand_controller_gui  neck_controller_gui  state_bridge_node
install/g1_state_bridge/share/g1_state_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/g1_zed_bridge/lib/g1_zed_bridge/: zed_stream_node
install/g1_zed_bridge/share/g1_zed_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
script/: aero_hand_controller.sh  aero_hand_controller_sim.sh  neck_controller.sh  neck_controller_sim.sh  run_isaacgym.sh  view.sh  view_robot.sh
src/g1_description/: CMakeLists.txt  package.xml
src/g1_description/launch/: display.launch.py  view.launch.py
src/g1_description/rviz/: display.rviz
src/g1_description/scripts/: mjcf_to_urdf.py
src/g1_description/urdf/: g1_tether.gazebo.xacro  g1_tether.urdf  g1_tether.urdf.xacro
src/g1_gazebo/: CMakeLists.txt  package.xml
src/g1_gazebo/config/: g1_controllers.yaml
src/g1_gazebo/launch/: g1_gazebo.launch.py
src/g1_gazebo/rviz/: sim.rviz
src/g1_gazebo/scripts/: base_tf_broadcaster.py  overlap_monitor.py  position_bridge.py
src/g1_gazebo/worlds/: g1_world.world
src/g1_isaacgym/launch/: isaacgym_rviz.launch.py
src/g1_isaacgym/policies/: NOTICE.md
src/g1_isaacgym/scripts/: rviz_bridge.py  stand_g1.py
src/g1_state_bridge/: package.xml  setup.cfg  setup.py
src/g1_state_bridge/g1_state_bridge/: neck_controller_gui.py  state_bridge_node.py
src/g1_state_bridge/launch/: real_state.launch.py
src/g1_zed_bridge/: package.xml  setup.cfg  setup.py
src/g1_zed_bridge/g1_zed_bridge/: zed_stream_node.py
src/g1_zed_bridge/launch/: zed_bridge.launch.py
(+20 files in other folders)
