<?xml version="1.0"?>
<package format="3">
  <name>g1_zed_bridge</name>
  <version>0.1.0</version>
  <description>
    Bridges the ZED Mini H.264 stream (opened on the G1 by calex/deploy/zed.py)
    into ROS 2 by decoding it locally with the ZED SDK and publishing
    sensor_msgs/Image and sensor_msgs/PointCloud2 for RViz.
  </description>
  <maintainer email="alexchiu0108@gmail.com">Alex Chiu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
